--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@nestjs/graphql": "^7.10.6",
     "@nestjs/platform-express": "^7.6.15",
     "@types/lodash": "^4.14.168",
+    "apollo-server-express": "^2.24.0",
     "firebase-admin": "^9.7.0",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^4.0.8",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
